# simpleagenttui

./: .gitignore  README.md  editblock.py  formatter.py  hello_world.py  main.py  pollinations.py  pyproject.toml  requirements.txt  utils.py
skills/: skill_base.py
workflows/: diagram.md
