[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "weirenong-simpleagent"
version = "0.2.8"
description = "Tiny local AI agent for edge devices, built to make small models useful with workflows, personas, file/web context, and safe tool-like actions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit",
    "wcwidth",
    "playwright",
    "faiss-cpu",
    "numpy",
    "pillow",
    "pypdf",
    "openpyxl",
    "langchain-text-splitters",
    "termaid"
]

[project.scripts]
simpleagent = "main:main"